--- a/src/css/themes/_sanityinc-tomorrow-bright.scss
+++ b/src/css/themes/_sanityinc-tomorrow-bright.scss
@@ -17,8 +17,13 @@ $cursor_fg: #000000;
 .Ymacs-Theme-sanityinc-tomorrow-bright .Ymacs_Frame-active div.line.Ymacs-current-line:before { color: #eaeaea; font-weight: bold; }
 .Ymacs-Theme-sanityinc-tomorrow-bright .Ymacs-frame-content:before { color: #969896; background-color: #151515; }
 .Ymacs-Theme-sanityinc-tomorrow-bright {
-.Ymacs_Popup { color: #eaeaea; background-color: #424242; scrollbar-color: #2a2a2a #424242; }
-.Ymacs_Popup.Ymacs_Completions {
+.Ymacs_Popup {
+  --ymacs-popup-bg: #424242;
+  --ymacs-popup-fg: #eaeaea;
+  --ymacs-popup-scrollbar-thumb: #424242;
+  --ymacs-popup-scrollbar-track: #2a2a2a;
+}
+.Ymacs_Popup .Ymacs_Menu {
 .Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #969896; }
 }
 .Ymacs_Overlay.selection div { background-color: #424242; }
