--- a/src/css/themes/_sanityinc-tomorrow-day.scss
+++ b/src/css/themes/_sanityinc-tomorrow-day.scss
@@ -17,8 +17,13 @@ $cursor_fg: #ffffff;
 .Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame-active div.line.Ymacs-current-line:before { color: #4d4d4c; font-weight: bold; }
 .Ymacs-Theme-sanityinc-tomorrow-day .Ymacs-frame-content:before { color: #8e908c; background-color: #f7f7f7; }
 .Ymacs-Theme-sanityinc-tomorrow-day {
-.Ymacs_Popup { color: #4d4d4c; background-color: #d6d6d6; scrollbar-color: #efefef #d6d6d6; }
-.Ymacs_Popup.Ymacs_Completions {
+.Ymacs_Popup {
+  --ymacs-popup-bg: #d6d6d6;
+  --ymacs-popup-fg: #4d4d4c;
+  --ymacs-popup-scrollbar-thumb: #d6d6d6;
+  --ymacs-popup-scrollbar-track: #efefef;
+}
+.Ymacs_Popup .Ymacs_Menu {
 .Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #8e908c; }
 }
 .Ymacs_Overlay.selection div { background-color: #d6d6d6; }
