--- a/src/css/themes/_material.scss
+++ b/src/css/themes/_material.scss
@@ -9,9 +9,9 @@ $cursor_fg: #263238;
 
 .Ymacs-Theme-material { --ymacs-cursor-bg: #ff9800; --ymacs-cursor-fg: #263238; }
 .Ymacs-Theme-material { color: #ffffff; background-color: #263238; }
-.Ymacs-Theme-material .Ymacs_SplitCont .bar { background-color: #969896; }
-.Ymacs-Theme-material .Ymacs_SplitCont.horiz .bar { border-top: 1px solid #cccccc; border-bottom: 1px solid #666666; }
-.Ymacs-Theme-material .Ymacs_SplitCont.vert .bar { border-left: 1px solid #cccccc; border-right: 1px solid #666666; }
+.Ymacs-Theme-material .Ymacs_SplitCont > .bar { background-color: #969896; }
+.Ymacs-Theme-material .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #cccccc; border-bottom: 1px solid #666666; }
+.Ymacs-Theme-material .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #cccccc; border-right: 1px solid #666666; }
 .Ymacs-Theme-material .Ymacs_Frame-active .Ymacs-current-line { background-color: #37474f63 }
 .Ymacs-Theme-material .Ymacs-frame-content div.line:before { color: #b0bec5; }
 .Ymacs-Theme-material .Ymacs_Frame-active div.line.Ymacs-current-line:before { color: #b0bec5; }
