--- a/src/css/themes/_sanityinc-tomorrow-bright.scss
+++ b/src/css/themes/_sanityinc-tomorrow-bright.scss
@@ -9,9 +9,9 @@ $cursor_fg: #000000;
 
 .Ymacs-Theme-sanityinc-tomorrow-bright { --ymacs-cursor-bg: #d54e53; --ymacs-cursor-fg: #000000; }
 .Ymacs-Theme-sanityinc-tomorrow-bright { color: #eaeaea; background-color: #000000; }
-.Ymacs-Theme-sanityinc-tomorrow-bright .Ymacs_SplitCont .bar { background-color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-bright .Ymacs_SplitCont.horiz .bar { border-top: 1px solid #424242; border-bottom: 1px solid #424242; }
-.Ymacs-Theme-sanityinc-tomorrow-bright .Ymacs_SplitCont.vert .bar { border-left: 1px solid #424242; border-right: 1px solid #424242; }
+.Ymacs-Theme-sanityinc-tomorrow-bright .Ymacs_SplitCont > .bar { background-color: #969896; }
+.Ymacs-Theme-sanityinc-tomorrow-bright .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #424242; border-bottom: 1px solid #424242; }
+.Ymacs-Theme-sanityinc-tomorrow-bright .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #424242; border-right: 1px solid #424242; }
 .Ymacs-Theme-sanityinc-tomorrow-bright .Ymacs_Frame-active .Ymacs-current-line { background-color: #2a2a2a63 }
 .Ymacs-Theme-sanityinc-tomorrow-bright .Ymacs-frame-content div.line:before { color: #969896; }
 .Ymacs-Theme-sanityinc-tomorrow-bright .Ymacs_Frame-active div.line.Ymacs-current-line:before { color: #eaeaea; font-weight: bold; }
