--- a/src/css/themes/_sanityinc-tomorrow-day.scss
+++ b/src/css/themes/_sanityinc-tomorrow-day.scss
@@ -9,9 +9,9 @@ $cursor_fg: #ffffff;
 
 .Ymacs-Theme-sanityinc-tomorrow-day { --ymacs-cursor-bg: #c82829; --ymacs-cursor-fg: #ffffff; }
 .Ymacs-Theme-sanityinc-tomorrow-day { color: #4d4d4c; background-color: #ffffff; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_SplitCont .bar { background-color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_SplitCont.horiz .bar { border-top: 1px solid #d6d6d6; border-bottom: 1px solid #d6d6d6; }
-.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_SplitCont.vert .bar { border-left: 1px solid #d6d6d6; border-right: 1px solid #d6d6d6; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_SplitCont > .bar { background-color: #969896; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #d6d6d6; border-bottom: 1px solid #d6d6d6; }
+.Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #d6d6d6; border-right: 1px solid #d6d6d6; }
 .Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame-active .Ymacs-current-line { background-color: #efefef63 }
 .Ymacs-Theme-sanityinc-tomorrow-day .Ymacs-frame-content div.line:before { color: #8e908c; }
 .Ymacs-Theme-sanityinc-tomorrow-day .Ymacs_Frame-active div.line.Ymacs-current-line:before { color: #4d4d4c; font-weight: bold; }
