--- a/src/css/themes/_sanityinc-tomorrow-eighties.scss
+++ b/src/css/themes/_sanityinc-tomorrow-eighties.scss
@@ -20,8 +20,7 @@ $cursor_fg: #2d2d2d;
 .Ymacs_Popup {
   --ymacs-popup-bg: #515151;
   --ymacs-popup-fg: #cccccc;
-  --ymacs-popup-scrollbar-thumb: #515151;
-  --ymacs-popup-scrollbar-track: #393939;
+  --ymacs-popup-scrollbar-thumb: var(--ymacs-popup-fg);
 }
 .Ymacs_Popup .Ymacs_Menu {
 .Ymacs_Menu_Item:hover, .Ymacs_Menu_Item.selected, .Ymacs_Menu_Item.selected:hover { background-color: #999999; }
