--- a/test/test.css
+++ b/test/test.css
@@ -11,6 +11,7 @@
 @import url("../dist/themes/standard-dark.css");
 @import url("../dist/themes/ef-deuteranopia-light.css");
 @import url("../dist/themes/ef-cyprus.css");
+@import url("../dist/themes/ef-elea-dark.css");
 
 html, body {
   background-color: #997;
