add html_mode (based on xml_mode, support mixed javascript and css)

--- a/src/css/themes/_base16-apathy.scss
+++ b/src/css/themes/_base16-apathy.scss
@@ -33,6 +33,7 @@ $cursor_fg: #031a16;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #5f9c92; background-color: #184e45; }
 .minibuffer-prompt { color: #96883e; }
 .mode-line-buffer-id { color: #883e96; }
+.directive { color: #96883e; }
 .type { color: #3e4c96; }
 .builtin { color: #963e4c; }
 .function-name { color: #96883e; }
