--- a/src/css/themes/_ef-cyprus.scss
+++ b/src/css/themes/_ef-cyprus.scss
@@ -33,6 +33,7 @@ $cursor_fg: #fcf7ef;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #142010; background-color: #c0df6f; }
 .minibuffer-prompt { color: #006f00; }
 .mode-line-buffer-id { font-weight: bold; }
+.directive { color: #a2604f; }
 .type { color: #444fcf; }
 .builtin { color: #557400; font-weight: bold; }
 .function-name { color: #a7601f; }
