--- a/src/css/themes/_ef-deuteranopia-light.scss
+++ b/src/css/themes/_ef-deuteranopia-light.scss
@@ -33,6 +33,7 @@ $cursor_fg: #f5f5ff;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #0a0a1f; background-color: #99c7ff; }
 .minibuffer-prompt { color: #375cd8; }
 .mode-line-buffer-id { font-weight: bold; }
+.directive { color: #6052cf; }
 .type { color: #805d00; }
 .builtin { color: #1f6fbf; font-weight: bold; }
 .function-name { color: #065fff; }
