--- a/src/css/themes/_ef-elea-dark.scss
+++ b/src/css/themes/_ef-elea-dark.scss
@@ -33,6 +33,7 @@ $cursor_fg: #222524;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #ecf0ff; background-color: #35605d; }
 .minibuffer-prompt { color: #cfaaff; }
 .mode-line-buffer-id { font-weight: bold; }
+.directive { color: #fa90ea; }
 .type { color: #6fcfd2; }
 .builtin { color: #d0b9f0; font-weight: bold; }
 .function-name { color: #7fca5a; }
