--- a/src/css/themes/_material.scss
+++ b/src/css/themes/_material.scss
@@ -33,6 +33,7 @@ $cursor_fg: #263238;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #ffffff; background-color: #1c1f26; }
 .minibuffer-prompt { color: #4dd0e1; }
 .mode-line-buffer-id { color: #ffffff; font-weight: bold; }
+.directive { color: #ffd700; }
 .type { color: #84ffff; }
 .builtin { color: #ff8a65; }
 .function-name { color: #84ffff; }
