--- a/src/css/themes/_sanityinc-tomorrow-blue.scss
+++ b/src/css/themes/_sanityinc-tomorrow-blue.scss
@@ -33,6 +33,7 @@ $cursor_fg: #002451;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #ffffff; background-color: #003f8e; border: 1px solid #003f8e; }
 .minibuffer-prompt { color: #bbdaff; }
 .mode-line-buffer-id { color: #ebbbff; }
+.directive { color: #ebbbff; }
 .type { color: #bbdaff; }
 .builtin { color: #ebbbff; }
 .function-name { color: #ffc58f; }
