--- a/src/css/themes/_sanityinc-tomorrow-bright.scss
+++ b/src/css/themes/_sanityinc-tomorrow-bright.scss
@@ -33,6 +33,7 @@ $cursor_fg: #000000;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #eaeaea; background-color: #424242; border: 1px solid #424242; }
 .minibuffer-prompt { color: #7aa6da; }
 .mode-line-buffer-id { color: #c397d8; }
+.directive { color: #c397d8; }
 .type { color: #7aa6da; }
 .builtin { color: #c397d8; }
 .function-name { color: #e78c45; }
