--- a/src/css/themes/_sanityinc-tomorrow-day.scss
+++ b/src/css/themes/_sanityinc-tomorrow-day.scss
@@ -33,6 +33,7 @@ $cursor_fg: #ffffff;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #4d4d4c; background-color: #d6d6d6; border: 1px solid #d6d6d6; }
 .minibuffer-prompt { color: #4271ae; }
 .mode-line-buffer-id { color: #8959a8; }
+.directive { color: #8959a8; }
 .type { color: #4271ae; }
 .builtin { color: #8959a8; }
 .function-name { color: #f5871f; }
