--- a/src/css/themes/_sanityinc-tomorrow-eighties.scss
+++ b/src/css/themes/_sanityinc-tomorrow-eighties.scss
@@ -33,6 +33,7 @@ $cursor_fg: #2d2d2d;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #cccccc; background-color: #515151; border: 1px solid #515151; }
 .minibuffer-prompt { color: #6699cc; }
 .mode-line-buffer-id { color: #cc99cc; }
+.directive { color: #cc99cc; }
 .type { color: #6699cc; }
 .builtin { color: #cc99cc; }
 .function-name { color: #f99157; }
