--- a/src/css/themes/_sanityinc-tomorrow-night.scss
+++ b/src/css/themes/_sanityinc-tomorrow-night.scss
@@ -33,6 +33,7 @@ $cursor_fg: #1d1f21;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #c5c8c6; background-color: #373b41; border: 1px solid #373b41; }
 .minibuffer-prompt { color: #81a2be; }
 .mode-line-buffer-id { color: #b294bb; }
+.directive { color: #b294bb; }
 .type { color: #81a2be; }
 .builtin { color: #b294bb; }
 .function-name { color: #de935f; }
