--- a/src/css/themes/_standard-dark.scss
+++ b/src/css/themes/_standard-dark.scss
@@ -33,6 +33,7 @@ $cursor_fg: #000000;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #ffffff; background-color: #505050; border: 1px outset #505050; }
 .minibuffer-prompt { color: #87ceff; }
 .mode-line-buffer-id { font-weight: bold; }
+.directive { color: #b0c4de; }
 .type { color: #98fb98; }
 .builtin { color: #b0c4de; }
 .function-name { color: #87cefa; }
