--- a/src/css/themes/_standard-light.scss
+++ b/src/css/themes/_standard-light.scss
@@ -33,6 +33,7 @@ $cursor_fg: #ffffff;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #000000; background-color: #b3b3b3; border: 1px outset #b3b3b3; }
 .minibuffer-prompt { color: #0000ff; }
 .mode-line-buffer-id { font-weight: bold; }
+.directive { color: #483d8b; }
 .type { color: #228b22; }
 .builtin { color: #483d8b; }
 .function-name { color: #0000ff; }
