--- a/src/css/themes/_whiteboard.scss
+++ b/src/css/themes/_whiteboard.scss
@@ -33,6 +33,7 @@ $cursor_fg: #f5f5f5;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #000000; background-color: #bfbfbf; border: 1px outset #bfbfbf; }
 .minibuffer-prompt { color: #104e8b; }
 .mode-line-buffer-id { color: #00008b; font-weight: bold; }
+.directive { color: #cdad00; }
 .type { color: #00688b; }
 .builtin { color: #cd6600; }
 .function-name { color: #cd9b1d; }
